Fixed uproject version so prebuild editor can open it

--- a/JPB.uproject
+++ b/JPB.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "{32A73E30-4E67-D9F3-7162-82AD0AB52701}",
+	"EngineAssociation": "5.7.1",
 	"Category": "",
 	"Description": "",
 	"Plugins": [
