Added a editor widget utility which calls a python script to cook/create the pak file instead of using the packaging pipeline. Avoids having to compile or build anything.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -102,3 +102,21 @@ ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
 
+[/Script/PythonScriptPlugin.PythonScriptPluginSettings]
+bIsolateInterpreterEnvironment=True
+bDeveloperMode=False
+bRunPipInstallOnStartup=True
+bPipStrictHashCheck=True
+bOfflineOnly=False
+OverrideIndexURL=
+ExtraInstallArgs=
+bRemoteExecution=False
+RemoteExecutionMulticastGroupEndpoint=239.0.0.1:6766
+RemoteExecutionMulticastBindAddress=127.0.0.1
+RemoteExecutionSendBufferSizeBytes=2097152
+RemoteExecutionReceiveBufferSizeBytes=2097152
+RemoteExecutionMulticastTtl=0
+
+[/Script/Engine.PhysicsSettings]
+DefaultShapeComplexity=CTF_UseComplexAsSimple
+
