--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -13,12 +13,9 @@ r.DynamicGlobalIlluminationMethod=1
 r.ReflectionMethod=1
 
 r.SkinCache.CompileShaders=True
-
-r.RayTracing=True
-
-r.RayTracing.RayTracingProxies.ProjectEnabled=True
-
-r.Substrate=True
+r.RayTracing=False
+r.RayTracing.RayTracingProxies.ProjectEnabled=False
+r.Substrate=False
 
 r.Substrate.ProjectGBufferFormat=0
 
@@ -32,6 +29,9 @@ r.DefaultFeature.LocalExposure.ShadowContrastScale=0.8
 r.AntiAliasingMethod=3
 r.ForwardShading=True
 r.Nanite.ProjectEnabled=False
+r.Lumen.HardwareRayTracing=False
+r.Lumen.Reflections.HardwareRayTracing.Translucent.Refraction.EnableForProject=False
+r.Lumen.TraceMeshSDFs=1
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX11
